--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.24.1
-numpy==1.26.0
-pandas==2.0.3
-scipy==1.11.1
-matplotlib==3.7.2
-seaborn==0.12.2
-joblib==1.2.0
-scikit-learn==1.3.0
+streamlit
+numpy
+pandas
+scipy
+matplotlib
+seaborn
+joblib
+scikit-learn
 sqlalchemy
 psycopg2-binary
