--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-numpy
-pandas
-scipy
-matplotlib
-seaborn
-joblib
+streamlit==1.24.1
+numpy==1.24.0
+pandas==2.0.3
+scipy==1.11.1
+matplotlib==3.7.2
+seaborn==0.12.2
+joblib==1.2.0
 scikit-learn==1.3.0
 sqlalchemy
 psycopg2-binary
