--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.24.1
-numpy==1.24.0
-pandas==2.0.3
-scipy==1.11.1
-matplotlib==3.7.2
+streamlit>=1.24.1
+numpy>=1.23.0,<1.24.0 
+pandas>=2.0.0,<2.1.0
+scipy>=1.11.0,<1.12.0
+matplotlib>=3.7.0,<3.8.0
 seaborn==0.12.2
-joblib==1.2.0
-scikit-learn==1.3.0
-sqlalchemy
+joblib>=1.2.0,<1.3.0
+scikit-learn>=1.3.0,<1.4.0
+sqlalchemy>=2.0.0
 psycopg2-binary
